@@ -8,6 +8,9 @@ General
 * New config option "MallocArenaMax" to control memory usage on GNU/Linux
 * Explicit error log if trying to load a 32bit (resp. 64bit) plugin into
   a 64bit (resp. 32bit) version of Orthanc
+* New configuration options (contributions by Varian):
+  - "DeidentifyLogs" to remove patient identification from the logs (C-GET, C-MOVE, C-FIND)
+  - "DeidentifyLogsDicomVersion" to specify the deidentification rules for the logs
 
 REST API
 --------
